--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
 .App {
-  text-align: center;
+  padding: 30px;
+  text-align: left;
+  max-width: 400px;
+  background-color: #ddd;
+  border-radius: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.form button{
+  margin-top: 8px;
+  min-width: 200px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list{
+  margin-top: 30px;
+}
+
+.list table, th, tr, td{
+  border: 1px solid black;
+  border-collapse: collapse;
+  padding: 4px;
 }
